--- a/lib/l10n/intl_ta.arb
+++ b/lib/l10n/intl_ta.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-12 11:22:52.418002",
+  "@@last_modified": "2025-12-15 09:25:21.103435",
   "acceptedTheInvitation": "👍 {username} அழைப்பை ஏற்றுக்கொண்டது",
   "@acceptedTheInvitation": {
     "type": "String",
@@ -10867,6 +10867,41 @@
   },
   "courseParticipantTooltip": "இந்த பாடத்தில் உள்ள அனைவரும் இதுவே. எந்த பயனரின் அவதாரில் கிளிக் செய்து \"சரசரி உரையாடலை தொடங்கு\" என்பதன் மூலம் ஒரு நேரடி செய்தி அனுப்பவும்.",
   "@courseParticipantTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "blockLemmaConfirmation": "இந்த சொல் உங்கள் பகுப்பாய்வில் நிரந்தரமாக நீக்கப்படும்",
+  "woman": "பெண்",
+  "man": "ஆண்",
+  "otherGender": "மற்றவை",
+  "unselectedGender": "ஒரு பாலின விருப்பத்தை தேர்வு செய்யவும்",
+  "gender": "பாலினம்",
+  "chatParticipantTooltip": "இந்த உரையாடலில் உள்ள அனைவரும் இதுவே. எந்த பயனரின் உருவத்தை கிளிக் செய்து \"உரையாடலை தொடங்கவும்\" என்பதன் மூலம் ஒரு நேரடி செய்தி அனுப்பவும்.",
+  "@blockLemmaConfirmation": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@woman": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@man": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@otherGender": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unselectedGender": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@gender": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@chatParticipantTooltip": {
     "type": "String",
     "placeholders": {}
   }
